Add MichaelJackson class and button

--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,18 @@ body, a:link, a:visited, a:active{
 .rotatingDancer{
   transform: rotate(0deg);
 }
+
+/*
+.img {
+    transform: scale(-1, 1);
+    -moz-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -khtml-transform: scale(-1, 1);
+    -ms-transform: scale(-1, 1);
+}
+*/
+
+.flipped {
+  transform: scale(-1, 1);
+}
