--- a/styles.css
+++ b/styles.css
@@ -89,20 +89,25 @@ body, a:link, a:visited, a:active{
   position: absolute;
   margin-top: -330px;
   margin-left: 170px;
-  padding: 5px 20px;
-  border-radius: 20px;
 
-  animation-duration: 1s;
-  animation-name: fade;
+
+  animation-duration: 1.5s;
+  animation-name: fade-expand;
 }
 
-@keyframes fade {
+@keyframes fade-expand {
   from {
     background-color: rgba(255,255,255,1);
     color: rgba(0,0,0,1);
+    padding: 5px 20px;
+    border-radius: 20px;
+    font-size: 20px;
   }
   to {
     background-color: rgba(255,255,255,0);
     color: rgba(0,0,0,0);
+    padding: 10px 30px;
+    border-radius: 40px;
+    font-size: 40px;
   }
 }
